--- a/css/main.scss
+++ b/css/main.scss
@@ -38,10 +38,13 @@ sitemap: false
 @import "buttons";
 @import "badges";
 @import "bullets";
+@import "sliding-menu";
+@import "menu-navicons"; /* animated 3 line menu icon */
 @import "notices";
 @import "animations";
 @import "tiles";
 @import "footnotes";
+@import "toc"; /* table of contents */
 @import "breadcrumbs";
 @import "syntax";
 
